--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "test-release-notes",
   "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "dev": "bun --hot run index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
